--- a/class-02/demos/class-demo/index.html
+++ b/class-02/demos/class-demo/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link rel="stylesheet" href="style.css">
+
+	
+		<script id="snack-template" type="text/x-handlebaars-template">
+			<li>
+				<section class="snack">
+						<h2>{{name}}</h2>
+						<h3>{{rank}}</h3>
+						<p>{{type}}</p>
+				</section>
+			</li>
+	</script>
+
     <title>Snack Ranker</title>
 </head>
 <body>
@@ -17,18 +29,13 @@
 
 
 		<ul class="snacks">
-				<li class="snack-template">
-						<section class="snack">
-								<h2>Name here</h2>
-								<h3>Rank here</h3>
-								<p>type here</p>
-						</section>
-				</li>
+				<!-- snacks here -->
 		</ul>
     <script
   	src="https://code.jquery.com/jquery-3.4.1.js"
   	integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
 		crossorigin="anonymous"></script>
 		<script src="app.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.js" integrity="sha256-/wU5o1HRMBu91AoM5TxLLP4aspWB+FH8dtrkJZGCPFg=" crossorigin="anonymous"></script>
 </body>
 </html>
