--- a/class-02/demos/class-demo/index.html
+++ b/class-02/demos/class-demo/index.html
@@ -7,12 +7,13 @@
 		<link rel="stylesheet" href="style.css">
 
 	
-		<script id="snack-template" type="text/x-handlebaars-template">
+		<script id="snack-template" type="text/x-handlebars-template">
 			<li>
 				<section class="snack">
 						<h2>{{name}}</h2>
 						<h3>{{rank}}</h3>
 						<p>{{type}}</p>
+						<img src="{{url}}" alt="{{name}}"/>
 				</section>
 			</li>
 	</script>
