--- a/class-02/demos/class-demo/index.html
+++ b/class-02/demos/class-demo/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 		<h1>Snack Ranker</h1>
-		<h2>Rank your favorite snacks</h2>
+		<h2>Rank your favorite snacks</git h2>
 		
 		<input type="radio" name="snack-type" value="all" checked>all</input>
 		<input type="radio" name="snack-type" value="sweet">sweet</input>
