--- a/exam-playground/public/index.html
+++ b/exam-playground/public/index.html
@@ -8,9 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- TODO add handlebars, ejs -->
+
     <h1>Exams are Fun!</h1>
     <p>Test out your html/css and client side javascript</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
+
+    <ul>
+        <li>list item 1</li>
+        <li>list item 2</li>
+        <li>list item 3</li>
+        <li>list item 4</li>
+        <li>list item 5</li>
+    </ul>
+
+    <p id="p1">hi</p>
+
 </body>
 </html>
